--- a/LeagueTracker/Base.lproj/Main.storyboard
+++ b/LeagueTracker/Base.lproj/Main.storyboard
@@ -50,10 +50,10 @@
             </objects>
             <point key="canvasLocation" x="1559.2" y="-681.40929535232385"/>
         </scene>
-        <!--View Controller-->
+        <!--Standing Detail View Controller-->
         <scene sceneID="Iwx-JZ-D71">
             <objects>
-                <viewController id="9Mo-Pz-MTM" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="StandingDetail" id="9Mo-Pz-MTM" customClass="StandingDetailViewController" customModule="LeagueTracker" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="uFs-Xu-Le3"/>
                         <viewControllerLayoutGuide type="bottom" id="hs5-WZ-E3I"/>
@@ -63,7 +63,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Uf3-bf-icm">
-                                <rect key="frame" x="102" y="221" width="172.5" height="126"/>
+                                <rect key="frame" x="102" y="196.5" width="172.5" height="175"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Team Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WXa-L4-SMi">
                                         <rect key="frame" x="0.0" y="0.0" width="172.5" height="37"/>
@@ -71,25 +71,26 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Games Lost:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sme-V5-8WY">
-                                        <rect key="frame" x="38.5" y="57" width="95.5" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Games Won:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QAI-50-Mfy">
+                                        <rect key="frame" x="37.5" y="57" width="97.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Games Won:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QAI-50-Mfy">
-                                        <rect key="frame" x="37.5" y="105.5" width="97.5" height="20.5"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Games Tied:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GcZ-F6-UNz">
+                                        <rect key="frame" x="38" y="106" width="96.5" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Games Lost:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sme-V5-8WY">
+                                        <rect key="frame" x="38.5" y="154.5" width="95.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LG1-op-whr">
-                                <rect key="frame" x="22" y="20" width="34" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Back"/>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -97,6 +98,12 @@
                             <constraint firstItem="Uf3-bf-icm" firstAttribute="centerY" secondItem="Vob-gQ-74o" secondAttribute="centerY" constant="-50" id="oEh-R8-CSh"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="gamesLostLabel" destination="sme-V5-8WY" id="gzu-tw-ckj"/>
+                        <outlet property="gamesTiedLabel" destination="GcZ-F6-UNz" id="OS3-8H-hW0"/>
+                        <outlet property="gamesWonLabel" destination="QAI-50-Mfy" id="ovA-lE-lCc"/>
+                        <outlet property="teamNameLabel" destination="WXa-L4-SMi" id="ey3-5f-OcQ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y6A-m5-aGP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -115,7 +122,7 @@
                                 <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5kQ-1D-H1s" id="6q9-Po-xTn">
-                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
@@ -188,14 +195,6 @@
                                     <constraint firstItem="i0a-j7-boI" firstAttribute="leading" secondItem="oYC-lP-6gt" secondAttribute="leading" id="klw-it-OPN"/>
                                 </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oiN-5X-Oy0">
-                                <rect key="frame" x="15" y="28" width="48" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Cancel"/>
-                                <connections>
-                                    <action selector="cancel:" destination="gk8-NW-4ls" eventType="touchUpInside" id="NBq-ar-4HJ"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -350,14 +349,6 @@
                                     <constraint firstAttribute="trailing" secondItem="8cL-AC-D0R" secondAttribute="trailing" id="zNe-9j-gdz"/>
                                 </constraints>
                             </stackView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZOX-u5-hpo">
-                                <rect key="frame" x="22" y="28" width="34" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <state key="normal" title="Back"/>
-                                <connections>
-                                    <action selector="backButton:" destination="s6c-wk-rES" eventType="touchUpInside" id="dyh-PV-WKv"/>
-                                </connections>
-                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
