--- a/LeagueTracker/Base.lproj/Main.storyboard
+++ b/LeagueTracker/Base.lproj/Main.storyboard
@@ -180,8 +180,8 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QJP-jA-r6k">
-                                        <rect key="frame" x="39" y="181" width="72" height="30"/>
-                                        <state key="normal" title="Add Game"/>
+                                        <rect key="frame" x="56.5" y="181" width="37" height="30"/>
+                                        <state key="normal" title="Done"/>
                                         <connections>
                                             <action selector="editButton:" destination="gk8-NW-4ls" eventType="touchUpInside" id="Y3E-Vw-IcF"/>
                                         </connections>
@@ -210,6 +210,72 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xrX-u1-V5p" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2274" y="-1491"/>
+        </scene>
+        <!--Game Stats-->
+        <scene sceneID="49J-Lo-LL5">
+            <objects>
+                <viewController storyboardIdentifier="GameDetail" id="4xu-Il-WTv" customClass="GameDetailViewController" customModule="LeagueTracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="GtG-tv-wnO"/>
+                        <viewControllerLayoutGuide type="bottom" id="why-gm-XVe"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="flp-Iv-pyv">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="gb8-gg-aMz">
+                                <rect key="frame" x="73.5" y="134.5" width="228.5" height="318"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Team" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G0g-mD-RR9">
+                                        <rect key="frame" x="66" y="0.0" width="96.5" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="VS." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Iri-55-SP1">
+                                        <rect key="frame" x="84.5" y="78" width="60" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Team" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="H4K-pc-z85">
+                                        <rect key="frame" x="66" y="156" width="96.5" height="48"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="25 - 45" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ytu-q1-oIx">
+                                        <rect key="frame" x="0.0" y="234" width="228.5" height="84"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="70"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gb8-gg-aMz" firstAttribute="centerX" secondItem="flp-Iv-pyv" secondAttribute="centerX" id="Mvd-JG-Kml"/>
+                            <constraint firstItem="gb8-gg-aMz" firstAttribute="centerY" secondItem="flp-Iv-pyv" secondAttribute="centerY" constant="-40" id="xa3-pf-wts"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Game Stats" id="Xk1-aI-KPx">
+                        <barButtonItem key="rightBarButtonItem" title="Edit" id="i6E-Nc-Sld">
+                            <connections>
+                                <action selector="editGameButton:" destination="4xu-Il-WTv" id="ILZ-rU-GdK"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="scoreLabel" destination="ytu-q1-oIx" id="NpO-Vx-pbX"/>
+                        <outlet property="team1Label" destination="G0g-mD-RR9" id="eoI-Ei-5Sw"/>
+                        <outlet property="team2Label" destination="H4K-pc-z85" id="qxD-Kw-Jjm"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="jsA-SC-i1r" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3158" y="-1475"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="sV3-ke-Mc5">
@@ -331,8 +397,8 @@
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GUg-6l-gro">
-                                        <rect key="frame" x="51" y="322" width="30" height="30"/>
-                                        <state key="normal" title="Edit"/>
+                                        <rect key="frame" x="47.5" y="322" width="37" height="30"/>
+                                        <state key="normal" title="Done"/>
                                         <connections>
                                             <action selector="editButton:" destination="s6c-wk-rES" eventType="touchUpInside" id="Q2i-BM-nFB"/>
                                         </connections>
@@ -365,7 +431,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f7u-KT-RhO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3015" y="-1491"/>
+            <point key="canvasLocation" x="3828" y="-1491"/>
         </scene>
     </scenes>
 </document>
